# Reddit_Scraping_Electric_Vehicles_opinions_project

./: .gitignore  .gitmodules  CITATION.cff  LICENSE  PROCESS_EXPLAINATION.md  README.md  TODO.md  audit_parquet_subs.py  dry_filter_check.py  pyproject.toml
config/: keywords.yaml  labeling.yaml  neg_filters.yaml  plots.yaml  subreddits.yaml
data/parquet_sample/year=2024/month=01/subreddit=AskALiberal/: part.parquet
data/parquet_sample/year=2024/month=02/subreddit=AskALiberal/: part.parquet
data/parquet_sample/year=2024/month=03/subreddit=AskALiberal/: part.parquet
data/parquet_sample/year=2024/month=04/subreddit=AskALiberal/: part.parquet
data/parquet_sample/year=2024/month=05/subreddit=AskALiberal/: part.parquet
data/parquet_sample/year=2024/month=06/subreddit=AskALiberal/: part.parquet
data/parquet_test/year=2025/month=10/subreddit=AskALiberal/: part.parquet
data/test_fixture/: sample_mixed.csv  sample_mixed.zst
results/: analysis_manifest.json  sentiment_labels.csv  stance_labels.csv
results/analysis/: analysis_manifest.json
scripts/: analyze_ev.py  benchmark_labeling.py  check_env.py  dry_filter_check.py  ingest_from_pushshiftdumps.py  label_stance.py  pre_split_pushshift_dir.py  quick_test.py  run_analysis.py  run_label_sample.py  run_pipeline.py  run_pipeline_quick.py  run_sentiment_sample.py  run_vulture_report.py  score_sentiment.py  split_pushshift_zst.py  tiny_benchmark.py  to_csv.py
scripts/windows/: ingest.ps1
src/evrepo/: __init__.py  api.py  filters.py  fuse_label.py  models.py  nli_zeroshot.py  normalize.py  paths.py  sentiment.py  subjects.py  utils.py  weak_rules.py
tmp/: sentiment_smoke.csv  stance_smoke.csv
