[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evrepo"
version = "0.1.0"
description = "EV stance analysis toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "OpenFis", email = "team@example.com"}]
dependencies = [
    "polars>=0.20",
    "pyarrow>=15",
    "duckdb>=0.10",
    "zstandard>=0.22",
    "orjson>=3.10",
    "pyyaml>=6.0.1",
    "regex>=2024.5.15",
    "spacy>=3.7",
    "vaderSentiment>=3.3.2",
    "transformers>=4.40",
    "torch>=2.2",
    "sentence-transformers>=2.6",
    "typer[all]>=0.12.3",
    "pydantic>=2.6",
    "scikit-learn>=1.4",
    "nltk>=3.8",
    "matplotlib>=3.8",
    "plotly>=5.19",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "ruff>=0.3",
    "black>=24.3",
    "isort>=5.13",
    "pre-commit>=3.6",
    "vulture>=2.11",
]

[tool.setuptools.packages.find]
where = ["src"]
